--- a/notebooks:/Dim_reduction.ipynb
+++ b/notebooks:/Dim_reduction.ipynb
@@ -39,7 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#read in cloud data"
+    "#read in cloud data\n",
+    "# "
    ]
   }
  ],
