adding table analysis back to notebook

--- a/notebooks:/data_exploration.ipynb
+++ b/notebooks:/data_exploration.ipynb
@@ -244,6 +244,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "06cfbd04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_to_explore[\"sex\"] = df_to_explore[\"sex\"].replace({True: \"Male\", False: \"Female\"})\n",
+    "df_to_explore.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "35929b0c",
    "metadata": {},
    "outputs": [
@@ -581,12 +592,162 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "89a200e0",
+   "metadata": {},
+   "source": [
+    "### Plots"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bb1e9957",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(16,12))\n",
+    "sns.boxplot(\n",
+    "    x=\"variable\",\n",
+    "    y=\"value\",\n",
+    "    hue=\"MI\",\n",
+    "    data=df_to_explore.melt(id_vars=\"MI\", value_vars=numeric_feature_columns),\n",
+    "    fliersize=5,\n",
+    "    palette=\"Set2\"\n",
+    ")\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.title(\"Boxplots of features by MI class\")\n",
+    "plt.legend(title=\"MI\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05dbf1d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#correlation between sex and condition\n",
+    "pd.crosstab(df_to_explore['MI'], df_to_explore['sex'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f85d5814",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8,5))\n",
+    "sns.countplot(\n",
+    "    data=df_to_explore,\n",
+    "    x='sex',\n",
+    "    hue='MI',\n",
+    "    palette='Set2'\n",
+    ")\n",
+    "plt.title('Medical Condition by Sex')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.show()\n",
+    "\n",
+    "#false is female"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0a37477",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#splitting by male and female - boxplot of features by MI class\n",
+    "# First, melt the data so Seaborn can handle multiple numeric columns\n",
+    "palette = {\n",
+    "    \"pMI_Male\":   \"#376A6C\",   #  \n",
+    "    \"healthy_Female\": \"#E3615C\",   #  \n",
+    "    \"pMI_Female\":   \"#BB2A25\", #  \n",
+    "    \"healthy_Male\": \"#6EB8BA\", # \n",
+    "    \n",
+    "}\n",
+    "\n",
+    "melted = df_to_explore.melt(\n",
+    "    id_vars=[\"MI\", \"sex\"],\n",
+    "    value_vars=numeric_feature_columns,\n",
+    "    var_name=\"variable\",\n",
+    "    value_name=\"value\"\n",
+    ")\n",
+    "\n",
+    "# Combine MI and sex to create grouped boxes\n",
+    "melted[\"MI_sex\"] = melted[\"MI\"].astype(str) + \"_\" + melted[\"sex\"].astype(str)\n",
+    "\n",
+    "plt.figure(figsize=(16, 10))\n",
+    "sns.boxplot(\n",
+    "    data=melted,\n",
+    "    x=\"variable\",\n",
+    "    y=\"value\",\n",
+    "    hue=\"MI_sex\",          # color by combined MI/sex group\n",
+    "    fliersize=4,\n",
+    "    palette=palette,\n",
+    "    dodge=True             # separate boxes side-by-side\n",
+    ")\n",
+    "\n",
+    "plt.title(\"Boxplots of features by MI class and sex\")\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.legend(title=\"MI_Sex\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a343a42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exploring proportions of each class in the data\n",
+    "# find proportion of each class in the data\n",
+    "value_counts = df_to_explore['MI'].value_counts()\n",
+    "\n",
+    "# Calculate the proportion of each value\n",
+    "proportions = value_counts / len(df_to_explore)\n",
+    "\n",
+    "# Display the result\n",
+    "print(proportions)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a75b862e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#proportions as a pie chart \n",
+    "plt.figure()\n",
+    "plt.pie(proportions, labels = ['healthy','pMI'],colors=['#0073a8', '#e564ad'])\n",
+    "plt.title('Class proportions in the dataset')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c105f94c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12,8))\n",
+    "#pick diverging colourmap\n",
+    "sns.heatmap(df_to_explore[numeric_feature_columns].corr(), annot=True, cmap='RdYlBu', vmin = -1, vmax =1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b336bea",
+   "metadata": {},
+   "source": [
+    "To note: BMI and weight are highly correlated "
+   ]
   },
   {
    "cell_type": "markdown",
