--- a/notebooks:/Clustering_anatomies.ipynb
+++ b/notebooks:/Clustering_anatomies.ipynb
@@ -1206,12 +1206,154 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4c90f32e",
+   "metadata": {},
+   "source": [
+    "Suspect that the clustering is clouded by the different anatomies that form as the heart contracts and moves"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "937620df",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4c89e9a",
+   "metadata": {},
+   "source": [
+    "Now repeating but only for the first frame"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "64c1d3af",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#load in data \n",
+    "#read in cloud data - no aesthectics just geometry \n",
+    "\n",
+    "#intialise an empty matrix\n",
+    "data_matrix_f1 = np.empty((900,3*18000))\n",
+    "i = 0\n",
+    "\n",
+    "#we want to go through each \".npy\" file in order\n",
+    "for file in natsorted(glob.glob(\"../data:/training_data/mixed_samples/*.npy\")):\n",
+    "\n",
+    "    #make each file in sequence the next row of a matrix\n",
+    "    current_geometry = np.load(file)\n",
+    "\n",
+    "    #fill the current row of the matrix\n",
+    "    data_matrix_f1[i] = current_geometry[0,:,0:3].flatten()\n",
+    "\n",
+    "    #move to next row of the matrix\n",
+    "    i = i + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eea272c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#code edited from sklearn documentation\n",
+    "#https://scikit-learn.org/stable/auto_examples/cluster/plot_kmeans_silhouette_analysis.html#sphx-glr-auto-examples-cluster-plot-kmeans-silhouette-analysis-py\n",
+    "range_n_clusters = [2, 3, 4, 5, 6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]\n",
+    "\n",
+    "for n_clusters in range_n_clusters:\n",
+    "    \n",
+    "    fig, (ax1) = plt.subplots(1, 1)\n",
+    "    fig.set_size_inches(18, 7)\n",
+    "\n",
+    "    # The 1st subplot is the silhouette plot\n",
+    "    # The silhouette coefficient can range from -1, 1 but in this example all\n",
+    "    # lie within [-0.1, 1]\n",
+    "    ax1.set_xlim([-1, 1])\n",
+    "    # The (n_clusters+1)*10 is for inserting blank space between silhouette\n",
+    "    # plots of individual clusters, to demarcate them clearly.\n",
+    "    ax1.set_ylim([0, len(data_matrix_f1) + (n_clusters + 1) * 10])\n",
+    "\n",
+    "    # Initialize the clusterer with n_clusters value and a random generator\n",
+    "    # seed of 10 for reproducibility.\n",
+    "    clusterer = KMeans(n_clusters=n_clusters, random_state=10)\n",
+    "    cluster_labels = clusterer.fit_predict(data_matrix_f1)\n",
+    "\n",
+    "    # The silhouette_score gives the average value for all the samples.\n",
+    "    # This gives a perspective into the density and separation of the formed\n",
+    "    # clusters\n",
+    "    silhouette_avg = silhouette_score(data_matrix_f1, cluster_labels)\n",
+    "    print(\n",
+    "        \"For n_clusters =\",\n",
+    "        n_clusters,\n",
+    "        \"The average silhouette_score is :\",\n",
+    "        silhouette_avg,\n",
+    "    )\n",
+    "\n",
+    "    # Compute the silhouette scores for each sample\n",
+    "    sample_silhouette_values = silhouette_samples(data_matrix_f1, cluster_labels)\n",
+    "\n",
+    "    y_lower = 10\n",
+    "    for i in range(n_clusters):\n",
+    "        # Aggregate the silhouette scores for samples belonging to\n",
+    "        # cluster i, and sort them\n",
+    "        ith_cluster_silhouette_values = sample_silhouette_values[cluster_labels == i]\n",
+    "\n",
+    "        ith_cluster_silhouette_values.sort()\n",
+    "\n",
+    "        size_cluster_i = ith_cluster_silhouette_values.shape[0]\n",
+    "        y_upper = y_lower + size_cluster_i\n",
+    "\n",
+    "        color = cm.nipy_spectral(float(i) / n_clusters)\n",
+    "        ax1.fill_betweenx(\n",
+    "            np.arange(y_lower, y_upper),\n",
+    "            0,\n",
+    "            ith_cluster_silhouette_values,\n",
+    "            facecolor=color,\n",
+    "            edgecolor=color,\n",
+    "            alpha=0.7,\n",
+    "        )\n",
+    "\n",
+    "        # Label the silhouette plots with their cluster numbers at the middle\n",
+    "        ax1.text(-0.05, y_lower + 0.5 * size_cluster_i, str(i))\n",
+    "\n",
+    "        # Compute the new y_lower for next plot\n",
+    "        y_lower = y_upper + 10  # 10 for the 0 samples\n",
+    "\n",
+    "    ax1.set_title(\"The silhouette plot for clusters.\")\n",
+    "    ax1.set_xlabel(\"The silhouette coefficient values\")\n",
+    "    ax1.set_ylabel(\"Cluster label\")\n",
+    "\n",
+    "    # The vertical line for average silhouette score of all the values\n",
+    "    ax1.axvline(x=silhouette_avg, color=\"red\", linestyle=\"--\")\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3381fb96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "WSS_calculated = calculate_WSS(data_matrix_f1, 20)\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(WSS_calculated)\n",
+    "plt.xlabel(\"number of clusters\")\n",
+    "plt.ylabel(\"WSS\")\n",
+    "plt.title(\"Elbow method for optimal k\")"
+   ]
   }
  ],
  "metadata": {
